@@ -8,4 +8,4 @@ VNX_MAJOR="2"
 VNX_MINOR="0b"
 
 # Automatically self updated (do not edit):
-VNX_LATEST_REVISION="4126"
+VNX_LATEST_REVISION="4157"
